# e-wastex

./: .breakpoints  README.md  app.py  database.py  pyproject.toml  requirments.txt
templates/: about.html  home.html  nav.html  parts.html  sell.html  services.html
