[tool.poetry]
name = "repl-nix-e-wastex"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_e_wastex"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
supabase = "^2.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
